# socialMedia

./: .gitignore  README.md  infos.txt  server.cpp
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  README.md  infos.txt  server.cpp
webClient/: bridge.js  index.html  package-lock.json  package.json  style.css
